<resources>

    <string name="app_name">Test</string>
    <string name="login">Login</string>
    <string name="Inscription">Inscription</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="email">Adresse email</string>
    <string name="telephone">Numero de telephone</string>
    <string name="mdp">Mot de passe</string>
    <string name="cmdp">Confirmation du mot de passe</string>
    <string name="click_to_login">Appuyer pour login</string>
    <string name="click_to_inscription"> Inscrivez-vous</string>
    <string name="menu_str_home">Accueil</string>
    <string name="tv_str_content_home">Menu</string>
    <string name="menu_str_account">Account</string>
    <string name="tv_str_account">Account</string>
    <string name="menu_str_message">Messages</string>
    <string name="tv_str_message">Messages</string>
    <string name="association_name">Nom Association</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié?</string>
    <string name="question_compte">N\'avez vous pas un compte?</string>
    <string name="connectez_vous">Avez-vous dèjà un compte?</string>
    <string name="mdp_confirmation">Confirmation mot de passe</string>
    <string name="btn_association">Association</string>
    <string name="btn_donation">Donation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_profil">Profil</string>
    <string name="btn_deconnexion">Déconnexion</string>
    <string name="Update">Mettre à jour</string>
</resources>