<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    tools:context=".Inscription">

    <TextView
        android:id="@+id/inscription"
        android:text="@string/Inscription"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/prenom"
        android:hint="@string/prenom"
        android:inputType="textPersonName"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscription"
        android:layout_height="48dp"
        tools:ignore="TextFields"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        app:layout_constraintEnd_toEndOf="@+id/nom"

        android:layout_height="48dp"
        tools:ignore="TextFields"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nom"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prenom"
        app:layout_constraintTop_toBottomOf="@+id/prenom"
        app:layout_constraintEnd_toEndOf="@+id/prenom"
        android:layout_height="48dp"
        tools:ignore="TextFields"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:autofillHints="" />




    <EditText
        android:id="@+id/mdp"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_height="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mdp_confirmation"
        android:hint="@string/mdp_confirmation"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/mdp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mdp"
        app:layout_constraintTop_toBottomOf="@+id/mdp"
        android:layout_height="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:autofillHints="" />


    <Button
        android:id="@+id/btn_Inscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#2196F3"
        android:padding="12dp"
        android:text="@string/Inscription"
        app:layout_constraintEnd_toEndOf="@+id/mdp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mdp_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/mdp_confirmation" />

    <LinearLayout
        android:id="@+id/linearLayout_inscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_Inscription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Inscription"
        app:layout_constraintTop_toBottomOf="@+id/btn_Inscription">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectez_vous"
        android:textColor="@color/colorWhite" />

        <TextView
        android:id="@+id/ConnexionNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connectez-vous"
        android:textColor="@color/colorRed" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
